# sift

./: Cargo.toml  README.md
docs/: index.html
docs/pkg/: README.md  package.json  sift.js  sift_bg.wasm  wasm_lib.js  wasm_lib_bg.wasm
src/: argparse.rs  dictionary.rs  lib.rs  main.rs  sift_command.rs  sifter.rs  test_utils.rs  trie.rs  wasm_lib.rs
test_data/: dict
