[package]
name = "sift"
version = "0.1.0"
edition = "2018"

[lib]
name = "sift"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
regex = "1.5.4"
itertools = "0.10.1"
clap = "2.33.3"
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
atty = "0.2.14"
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.6"
